ugh. Reacstrap card width is broken. Unable to figure out how to properly set up and pass state with the specific style of React.Component style of state we were taught.

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -1,5 +1,10 @@
 
-
+body {
+  margin: 0;
+  font-family: "Open Sans Condensed", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 .completed {
   text-decoration: line-through;
